# sfml-flappy-bird

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.h  Globals.h  SharedContext.h  World.cpp  World.h
src/objects/: Bird.cpp  Bird.h
src/states/: GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  IntroState.cpp  IntroState.h  PausedState.cpp  PausedState.h  StateManager.cpp  StateManager.h
src/utils/: Animation.cpp  Animation.h
